# MolDepictor

./: README.md  pyproject.toml
src/moldepictor/: __init__.py
src/moldepictor/generation/: cdk.py  rdkit.py  transformation.py
src/moldepictor/parser/: label.py  registration.py
src/moldepictor/utils/: drawing.py  generation.py  transformation.py
