[project]
name = "moldepictor"
version = "0.1.0"
description = "Add your description here"
dependencies = [
    "rdkit>=2024.3.5",
    "matplotlib>=3.9.2",
    "pillow>=10.4.0",
    "torch>=2.4.1",
    "cairosvg>=2.7.1",
    "opencv-python>=4.10.0.84",
    "albumentations>=1.4.18",
    "shapely>=2.0.6",
]
readme = "README.md"
requires-python = ">= 3.8"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.rye]
managed = true
dev-dependencies = []

[tool.hatch.metadata]
allow-direct-references = true

[tool.hatch.build.targets.wheel]
packages = ["src/moldepictor"]
